refactor: Clamp 사용으로 범위 초과 방지